[gd_scene load_steps=2 format=3 uid="uid://bqlqngg600wus"]

[ext_resource type="Script" uid="uid://cmfafwqtqbho4" path="res://Scripts/Core/menu.gd" id="1_lti8b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_bottom = NodePath("VBoxContainer/ExitButton")
script = ExtResource("1_lti8b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 62.5
offset_right = 210.0
offset_bottom = 271.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../CreditsButton")
text = "Jogar"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../CreditsButton")
text = "Sair"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
text = "Cr√©ditos"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
